<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MovieDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/mdf_iv_movie_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/avengers_end_game_banner"

            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_avengers_background" />

        <View
            android:id="@+id/mdf_gradient_mask"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:background="@drawable/mdf_gradient_mask"
            app:layout_constraintBottom_toBottomOf="@id/mdf_iv_movie_banner"
            app:layout_constraintEnd_toEndOf="@id/mdf_iv_movie_banner"
            app:layout_constraintStart_toStartOf="@id/mdf_iv_movie_banner"
            app:layout_constraintTop_toTopOf="@id/mdf_iv_movie_banner" />

        <TextView
            android:id="@+id/mdf_tv_back_button"
            style="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"

            android:alpha="0.5"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingStart="16dp"

            android:paddingTop="8dp"

            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/back"
            android:textColor="@color/back_button_text"
            android:textSize="@dimen/back_button_text_size"
            app:drawableLeftCompat="@drawable/ic_left_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mdf_tv_age_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/md_margin_side"
            android:layout_marginEnd="8dp"

            android:text="@string/age_rating_for_avengers"
            android:textColor="@color/age_rating"
            android:textSize="@dimen/age_rating_for_avengers_text_size"

            app:layout_constraintBottom_toTopOf="@+id/mdf_tv_movie_title"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/mdf_tv_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/md_margin_side"
            android:layout_marginEnd="@dimen/md_margin_side"
            android:gravity="center_vertical"
            android:text="@string/film_title_avengers"
            android:textColor="@color/film_title"
            android:textSize="@dimen/film_title_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/mdf_iv_movie_banner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mdf_iv_movie_banner" />

        <TextView
            android:id="@+id/mdf_tv_movie_genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/md_margin_side"
            android:layout_marginTop="4dp"

            android:layout_marginEnd="@dimen/md_margin_side"
            android:text="@string/genres_of_avengers"
            android:textColor="@color/genres"

            android:textSize="@dimen/genres_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mdf_tv_movie_title" />

        <RatingBar
            android:id="@+id/mdf_rating_bar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/md_margin_side"

            android:rating="4"
            android:theme="@style/Widget.MyApp.RatingBar.Small"

            app:layout_constraintBottom_toBottomOf="@+id/mdf_tv_reviews_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/mdf_tv_reviews_count" />

        <TextView
            android:id="@+id/mdf_tv_reviews_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"

            android:text="@string/avengers_reviews_count"
            android:textColor="@color/reviews_count"

            android:textSize="@dimen/reviews_count_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/mdf_rating_bar"
            app:layout_constraintTop_toBottomOf="@id/mdf_tv_movie_genres" />

        <TextView
            android:id="@+id/mdf_tv_storyline_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/md_margin_side"
            android:layout_marginTop="24dp"

            android:layout_marginEnd="@dimen/md_margin_side"
            android:text="@string/storyline_heading"
            android:textColor="@color/storyline_heading"

            android:textSize="@dimen/storyline_heading_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mdf_tv_reviews_count" />

        <TextView
            android:id="@+id/mdf_tv_storyline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/md_margin_side"
            android:layout_marginTop="4dp"

            android:layout_marginEnd="@dimen/md_margin_side"
            android:alpha="0.75"
            android:gravity="center_vertical"

            android:lineSpacingExtra="4sp"
            android:text="@string/avengers_storyline"
            android:textColor="@color/storyline"
            android:textSize="@dimen/storyline_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mdf_tv_storyline_heading" />

        <TextView
            android:id="@+id/mdf_tv_cast_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/md_margin_side"
            android:layout_marginTop="24dp"

            android:layout_marginEnd="@dimen/md_margin_side"
            android:text="@string/cast_heading"
            android:textColor="@color/cast_heading"

            android:textSize="@dimen/cast_heading_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mdf_tv_storyline" />

        <ImageView
            android:id="@+id/mdf_iv_downey"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/md_margin_side"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/md_padding_between_actor_photo"
            android:contentDescription="@string/actor_photo"
            android:src="@drawable/img_downey_jr"
            app:layout_constraintDimensionRatio="1:1"

            app:layout_constraintEnd_toStartOf="@id/mdf_iv_evans"
            app:layout_constraintStart_toStartOf="parent"


            app:layout_constraintTop_toBottomOf="@id/mdf_tv_cast_heading" />

        <ImageView
            android:id="@+id/mdf_iv_evans"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/md_padding_between_actor_photo"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/md_padding_between_actor_photo"
            android:contentDescription="@string/actor_photo"
            android:src="@drawable/img_evans"
            app:layout_constraintDimensionRatio="1:1"

            app:layout_constraintEnd_toStartOf="@id/mdf_iv_ruffalo"
            app:layout_constraintStart_toEndOf="@id/mdf_iv_downey"

            app:layout_constraintTop_toBottomOf="@id/mdf_tv_cast_heading" />

        <ImageView
            android:id="@+id/mdf_iv_ruffalo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/md_padding_between_actor_photo"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/md_padding_between_actor_photo"
            android:contentDescription="@string/actor_photo"
            android:src="@drawable/img_ruffalo"

            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/mdf_iv_Hemsworth"

            app:layout_constraintStart_toEndOf="@id/mdf_iv_evans"
            app:layout_constraintTop_toBottomOf="@id/mdf_tv_cast_heading" />

        <ImageView
            android:id="@+id/mdf_iv_Hemsworth"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/md_padding_between_actor_photo"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/md_margin_side"
            android:contentDescription="@string/actor_photo"
            android:src="@drawable/img_hemsworth"
            app:layout_constraintDimensionRatio="1:1"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/mdf_iv_ruffalo"

            app:layout_constraintTop_toBottomOf="@id/mdf_tv_cast_heading" />

        <TextView
            android:id="@+id/mdf_tv_downey"
            style="@style/TextAppearance.Caption.CastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:paddingTop="8dp"
            android:text="@string/robert_down"

            app:layout_constraintEnd_toEndOf="@id/mdf_iv_downey"
            app:layout_constraintStart_toStartOf="@id/mdf_iv_downey"
            app:layout_constraintTop_toBottomOf="@id/mdf_iv_downey" />

        <TextView
            android:id="@+id/mdf_tv_evans"
            style="@style/TextAppearance.Caption.CastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:paddingTop="8dp"
            android:text="@string/evans"

            app:layout_constraintEnd_toEndOf="@id/mdf_iv_evans"
            app:layout_constraintStart_toStartOf="@id/mdf_iv_evans"
            app:layout_constraintTop_toBottomOf="@id/mdf_iv_evans" />

        <TextView
            android:id="@+id/mdf_tv_ruffalo"
            style="@style/TextAppearance.Caption.CastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:paddingTop="8dp"
            android:text="@string/ruffalo"

            app:layout_constraintEnd_toEndOf="@id/mdf_iv_ruffalo"
            app:layout_constraintStart_toStartOf="@id/mdf_iv_ruffalo"
            app:layout_constraintTop_toBottomOf="@id/mdf_iv_ruffalo" />

        <TextView
            android:id="@+id/mdf_tv_hemsworth"
            style="@style/TextAppearance.Caption.CastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:paddingTop="8dp"
            android:text="@string/hemsworth"

            app:layout_constraintEnd_toEndOf="@id/mdf_iv_Hemsworth"
            app:layout_constraintStart_toStartOf="@id/mdf_iv_Hemsworth"
            app:layout_constraintTop_toBottomOf="@id/mdf_iv_Hemsworth" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
